[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.7.11"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "=1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
